--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "@nmq/q": "^1.0.3",
+    "express-swagger-generator": "^1.1.14",
+    "jsdoc": "^3.6.2",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
     "express": "^4.17.1",
